Add Netlify configuration and update site for deployment

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                 <img src="profile.png" alt="profile photo" class="about-photo" />
                 <div class="about-text">
                     <p>
-                        i'm a computer engineering student at ucsd (3.8 gpa) passionate about full-stack development, mobile apps, and game development. 
-                        when i'm not coding, you'll find me working on robosub projects or mentoring fellow developers.
+                        i'm a computer engineering student at ucsd (3.8 gpa) who enjoys building mobile apps, full-stack web systems, and learning about computer architecture and ai. 
+                        when i'm not coding, i like playing basketball, going to the gym, and trying new restaurants wherever i go
                     </p>
                 </div>
             </div>
@@ -81,7 +81,7 @@
                         </div>
                         <div class="project-content">
                             <h3>ucsd robosub team website</h3>
-                            <p>full-stack platform for UCSD RoboSub with dynamic content management, user authentication, and role-based access control. designed high-fidelity figma prototypes and implemented pixel-perfect react components.</p>
+                            <p>full-stack platform for UCSD RoboSub with dynamic content management, user authentication, and role-based access control. implemented responsive react components and integrated backend functionality.</p>
                             <div class="project-tech">
                                 <span>react</span>
                                 <span>javascript</span>
