Update experience section: change job title to software intern, update date to June 2025, and improve read less scroll behavior

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                             <i class="fas fa-brain"></i>
                         </div>
                         <div class="experience-content">
-                            <h3>full stack developer</h3>
+                            <h3>software intern</h3>
                             <p class="experience-company">health1st.ai</p>
-                            <p class="experience-duration">january 2025 - present</p>
+                            <p class="experience-duration">june 2025 - present</p>
                             <p class="experience-description">
                                 <span class="description-short">architected a distributed, microservices-based platform for healthcare organizations with role-aware multi-tenant isolation, ensuring secure data partitioning across providers, patients, and administrators.</span>
                                 <span class="description-full" style="display: none;">
