--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <h1 class="hero-title hero-role">full stack developer</h1>
             <p class="hero-subtitle">i build things for the web</p>
             <div class="hero-buttons">
+                <a href="#experience" class="btn btn-secondary">experience</a>
                 <a href="#projects" class="btn btn-secondary">projects</a>
                 <a href="#contact" class="btn btn-secondary">contact</a>
                 <a href="Nicholas_Le_Resume.pdf" class="btn btn-secondary" target="_blank" rel="noopener noreferrer" download="Nicholas Le Resume.pdf">preview resume</a>
