--- a/index.html
+++ b/index.html
@@ -3,11 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nicholas le | developer</title>
+    <title>Nicholas Le | UC San Diego Computer Science Student & Full-Stack Developer</title>
+    <meta name="description" content="Nicholas Le dev — UC San Diego Computer Science student and full-stack developer. Nicholas Le CS student building software projects in web development, AI systems, and mobile applications. View my portfolio and projects.">
+    <meta name="keywords" content="Nicholas Le, Nicholas Le dev, Nicholas Le CS, Nicholas Le developer, UCSD, UC San Diego, Computer Science, CSE, full-stack developer, software engineer, student, portfolio, nicholas le programming, nicholas le software">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Nicholas Le">
+    <meta property="og:title" content="Nicholas Le | UC San Diego Computer Science Student">
+    <meta property="og:description" content="UC San Diego Computer Science student building software projects in full-stack web development, AI systems, and mobile applications.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://nicholasle.dev">
+    <meta property="og:image" content="https://nicholasle.dev/profile.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Nicholas Le | UC San Diego Computer Science Student">
+    <meta name="twitter:description" content="UC San Diego Computer Science student building software projects in full-stack web development, AI systems, and mobile applications.">
+    <meta name="twitter:image" content="https://nicholasle.dev/profile.png">
+    <link rel="canonical" href="https://nicholasle.dev">
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='%230a0a0a'/><rect x='10' y='10' width='80' height='80' fill='none' stroke='%2300f260' stroke-width='2'/><text x='50' y='65' font-family='monospace' font-size='36' fill='%2300f260' text-anchor='middle' font-weight='900'>nl</text></svg>">
     <link rel="stylesheet" href="styles.css?v=1.2">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Nicholas Le",
+        "givenName": "Nicholas",
+        "familyName": "Le",
+        "url": "https://nicholasle.dev",
+        "image": "https://nicholasle.dev/profile.png",
+        "description": "Nicholas Le dev - UC San Diego Computer Science student and full-stack developer",
+        "jobTitle": "Computer Science Student",
+        "worksFor": {
+            "@type": "CollegeOrUniversity",
+            "name": "University of California, San Diego",
+            "url": "https://ucsd.edu"
+        },
+        "alumniOf": {
+            "@type": "CollegeOrUniversity",
+            "name": "University of California, San Diego"
+        },
+        "knowsAbout": [
+            "Computer Science",
+            "CS",
+            "Full-Stack Development",
+            "Software Development",
+            "JavaScript",
+            "React",
+            "Python",
+            "FastAPI",
+            "Mobile Development",
+            "iOS Development",
+            "Swift",
+            "Web Development",
+            "Programming",
+            "Software Engineering"
+        ],
+        "sameAs": [
+            "https://www.linkedin.com/in/nicholas-le-0b7704285/",
+            "https://github.com/nicholasle"
+        ],
+        "email": "nicholas73.le@gmail.com",
+        "email": "nkl001@ucsd.edu"
+    }
+    </script>
 </head>
 <body>
     <div id="particles-js"></div>
@@ -50,8 +110,8 @@
     <!-- Hero Page 2: Role -->
     <section id="hero-2" class="hero-page">
         <div class="hero-content">
-            <h1 class="hero-title hero-role">full stack developer</h1>
-            <p class="hero-subtitle">i build things for the web</p>
+            <h1 class="hero-title hero-role">UC San Diego Computer Science Student</h1>
+            <p class="hero-subtitle">full-stack developer building software for the web</p>
             <div class="hero-buttons">
                 <a href="#experience" class="btn btn-secondary">experience</a>
                 <a href="#projects" class="btn btn-secondary">projects</a>
@@ -59,11 +119,11 @@
                 <a href="Nicholas_Le_Resume.pdf" class="btn btn-secondary" target="_blank" rel="noopener noreferrer" download="Nicholas Le Resume.pdf">preview resume</a>
             </div>
             <div class="about-card">
-                <img src="profile.png" alt="profile photo" class="about-photo" />
+                <img src="profile.png" alt="Nicholas Le UC San Diego Computer Science Student" class="about-photo" />
                 <div class="about-text">
                     <p>
-                        i'm a computer engineering student at ucsd (3.8 gpa) who enjoys building mobile apps, full-stack web systems, and learning about computer architecture and ai. 
-                        when i'm not coding, i like playing basketball, going to the gym, and trying new restaurants wherever i go
+                        I'm Nicholas Le, a Computer Science (CS) student at UC San Diego (UCSD) with a 3.8 GPA. As a UC San Diego CSE student and developer, I enjoy building mobile apps, full-stack web systems, and learning about computer architecture and AI. 
+                        Nicholas Le dev work includes software development projects in web technologies, mobile applications, and AI systems. When I'm not coding at UCSD, I like playing basketball, going to the gym, and trying new restaurants wherever I go.
                     </p>
                 </div>
             </div>
@@ -139,8 +199,8 @@
                             <i class="fas fa-robot"></i>
                         </div>
                         <div class="project-content">
-                            <h3>ucsd robosub team website</h3>
-                            <p>full-stack platform for UCSD RoboSub with dynamic content management, user authentication, and role-based access control. implemented responsive react components and integrated backend functionality.</p>
+                            <h3>UCSD RoboSub Team Website</h3>
+                            <p>Full-stack platform for UC San Diego RoboSub team with dynamic content management, user authentication, and role-based access control. Built as a UC San Diego Computer Science student project using React components and integrated backend functionality.</p>
                             <div class="project-tech">
                                 <span>react</span>
                                 <span>javascript</span>
@@ -205,7 +265,7 @@
         <!-- Skills Section -->
         <section id="skills" class="skills">
             <div class="container">
-                <h2 class="section-title">skills</h2>
+                <h2 class="section-title">Nicholas Le dev skills & technologies</h2>
                 <div class="skills-grid">
                     <div class="skill-card">
                         <i class="fab fa-java"></i>
@@ -310,6 +370,12 @@
         <footer class="footer">
             <div class="container">
                 <p>&copy; 2025 nicholas le. all rights reserved.</p>
+                <!-- SEO Keywords for search engines -->
+                <div style="display: none;">
+                    Nicholas Le dev, Nicholas Le CS, Nicholas Le developer, Nicholas Le programming, Nicholas Le software, 
+                    Nicholas Le UCSD, Nicholas Le UC San Diego, Nicholas Le Computer Science, Nicholas Le CSE,
+                    nicholas le dev, nicholas le cs, nicholas le developer, nicholas le programming
+                </div>
             </div>
         </footer>
     </main>
