--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
     <!-- Hero Page 2: Role -->
     <section id="hero-2" class="hero-page">
         <div class="hero-content">
-            <h1 class="hero-title hero-role">UC San Diego Computer Science Student</h1>
-            <p class="hero-subtitle">full-stack developer building software for the web</p>
+            <h1 class="hero-title hero-role">full stack developer</h1>
+            <p class="hero-subtitle">i build things for the web</p>
             <div class="hero-buttons">
                 <a href="#experience" class="btn btn-secondary">experience</a>
                 <a href="#projects" class="btn btn-secondary">projects</a>
@@ -122,8 +122,8 @@
                 <img src="profile.png" alt="Nicholas Le UC San Diego Computer Science Student" class="about-photo" />
                 <div class="about-text">
                     <p>
-                        I'm Nicholas Le, a Computer Science (CS) student at UC San Diego (UCSD) with a 3.8 GPA. As a UC San Diego CSE student and developer, I enjoy building mobile apps, full-stack web systems, and learning about computer architecture and AI. 
-                        Nicholas Le dev work includes software development projects in web technologies, mobile applications, and AI systems. When I'm not coding at UCSD, I like playing basketball, going to the gym, and trying new restaurants wherever I go.
+                        hi, my name is nicholas! i'm a computer engineering student at ucsd (3.8 gpa) who enjoys building mobile apps, full-stack web systems, and learning about computer architecture and ai. 
+                        when i'm not coding, i like playing basketball, going to the gym, and trying new restaurants wherever i go
                     </p>
                 </div>
             </div>
@@ -199,8 +199,8 @@
                             <i class="fas fa-robot"></i>
                         </div>
                         <div class="project-content">
-                            <h3>UCSD RoboSub Team Website</h3>
-                            <p>Full-stack platform for UC San Diego RoboSub team with dynamic content management, user authentication, and role-based access control. Built as a UC San Diego Computer Science student project using React components and integrated backend functionality.</p>
+                            <h3>ucsd robosub team website</h3>
+                            <p>full-stack platform for UCSD RoboSub with dynamic content management, user authentication, and role-based access control. implemented responsive react components and integrated backend functionality.</p>
                             <div class="project-tech">
                                 <span>react</span>
                                 <span>javascript</span>
@@ -265,7 +265,7 @@
         <!-- Skills Section -->
         <section id="skills" class="skills">
             <div class="container">
-                <h2 class="section-title">Nicholas Le dev skills & technologies</h2>
+                <h2 class="section-title">skills</h2>
                 <div class="skills-grid">
                     <div class="skill-card">
                         <i class="fab fa-java"></i>
