resume and nba tracker

--- a/index.html
+++ b/index.html
@@ -196,6 +196,24 @@
                 <div class="projects-grid">
                     <div class="project-card">
                         <div class="project-image">
+                            <i class="fas fa-chart-bar"></i>
+                        </div>
+                        <div class="project-content">
+                            <h3>sports analytics betting engine</h3>
+                            <p>end-to-end sports analytics engine for identifying +EV player prop bets using distributional modeling with Monte Carlo simulation. features advanced matchup analysis with Bayesian shrinkage, automated NBA data ingestion with DuckDB, and fractional Kelly criterion for optimal bankroll management.</p>
+                            <div class="project-tech">
+                                <span>python</span>
+                                <span>monte carlo simulation</span>
+                                <span>statistical modeling</span>
+                                <span>duckdb</span>
+                                <span>nba api</span>
+                                <span>bayesian statistics</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="project-card">
+                        <div class="project-image">
                             <i class="fas fa-robot"></i>
                         </div>
                         <div class="project-content">
@@ -353,7 +371,7 @@
         <!-- Footer -->
         <footer class="footer">
             <div class="container">
-                <p>&copy; 2025 nicholas le. all rights reserved.</p>
+                <p>&copy; 2026 nicholas le. all rights reserved.</p>
                 <!-- SEO Keywords for search engines -->
                 <div style="display: none;">
                     Nicholas Le dev, Nicholas Le CS, Nicholas Le developer, Nicholas Le programming, Nicholas Le software, 
